--- a/src/internal/styles/deltachan.css
+++ b/src/internal/styles/deltachan.css
@@ -1,5 +1,5 @@
 body {
-	background: linear-gradient(180deg, #e1e1f7 0%, #f0eff9 6cm);
+	background: #f0eff9;
 	color: black;
 	background-attachment: fixed;
 }
