--- a/src/internal/base_style.css
+++ b/src/internal/base_style.css
@@ -280,7 +280,7 @@ form .clear_file, form .file_upload {
 .list {
 	border: 1px solid black;
 
-	width: 25cm;
+	max-width: 25cm;
 	font-size: 10pt;
 	margin: auto;
 }
@@ -417,8 +417,7 @@ form .clear_file, form .file_upload {
 .catalog_posts {
 	margin: 0.5cm;
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 10px;
+	grid-template-columns: repeat(2, 1fr);
 }
 
 @media (min-width: 700px) {
