--- a/src/internal/base_style.css
+++ b/src/internal/base_style.css
@@ -189,14 +189,19 @@ form .clear_file, form .file_upload {
 	margin: 0;
 }
 
-.post .post_attachment {
-	max-height: 200px;
-
-	float: left;
-	border: none;
-
+.post_attachment, .post_attachment_expand {
 	margin-right: 0.2cm;
 	background: none;
+}
+
+.post_attachment {
+	float: left;
+	border: none;
+	max-height: 200px;
+}
+
+.post_attachment_expand {
+	display: block;
 }
 
 .report_attachment {
