--- a/src/internal/base_style.css
+++ b/src/internal/base_style.css
@@ -189,18 +189,18 @@ form .clear_file, form .file_upload {
 	margin: 0;
 }
 
-.post_attachment, .post_attachment_expand {
+.post .post_attachment, .post .post_attachment_expand {
 	margin-right: 0.2cm;
 	background: none;
 }
 
-.post_attachment {
+.post .post_attachment {
 	float: left;
 	border: none;
 	max-height: 200px;
 }
 
-.post_attachment_expand {
+.post .post_attachment_expand {
 	display: block;
 }
 
@@ -455,7 +455,7 @@ form .clear_file, form .file_upload {
 	overflow: scroll;
 }
 
-.catalog_post a, .catalog_post pre {
+.catalog_post a, .catalog_post pre, .catalog_post p {
 	display: block;
 	font-size: 10pt;
 	margin: 0;
