Changed the wunk theme a little

--- a/src/internal/styles/wunk.css
+++ b/src/internal/styles/wunk.css
@@ -23,7 +23,7 @@ hr {
 }
 
 .reply {
-	background: #f0e0d6;
+	background: #f5e5cf;
   	border-top: 1px solid rgba(255, 255, 255, 0.5);
   	border-left: 1px solid rgba(255, 255, 255, 0.5);
   	border-bottom: 1px solid rgba(0, 0, 0, 0.25);
