--- a/src/internal/base_style.css
+++ b/src/internal/base_style.css
@@ -171,7 +171,7 @@ body {
 	font-size: 10pt;
 }
 
-.post .your_post {
+.post .your_post, .post .your_thread {
 	margin: 0px;
 	margin-right: 0.2cm;
 	display: inline-block;
