--- a/src/internal/styles/deltachan.css
+++ b/src/internal/styles/deltachan.css
@@ -35,6 +35,10 @@ hr {
   border-right: 1px solid rgba(0, 0, 0, 0.25);
 }
 
+.post_highlighted {
+	background: #d5baff;
+}
+
 #topbar {
     box-shadow: 0 0 10px #00000044;
     padding: 0.1cm;
