--- a/src/internal/styles/futaba.css
+++ b/src/internal/styles/futaba.css
@@ -31,13 +31,12 @@ hr {
     margin: 0;
 }
 
-.reply {
+.reply, #topbar {
 	background: #f0e0d6;
 }
 
 #topbar {
   border-bottom: 1px solid black;
-  background: rgb(231, 231, 220);
   padding: 0.1cm;
 }
 
@@ -121,4 +120,8 @@ a:link, a:visited {
 
 .recent_images {
 	border: 1px solid #99cc66 !important;
+}
+
+.post_highlighted {
+	background-color: #f0c0b0;
 }
