--- a/src/internal/styles/wunk.css
+++ b/src/internal/styles/wunk.css
@@ -30,6 +30,10 @@ hr {
   	border-right: 1px solid rgba(0, 0, 0, 0.25);
 }
 
+.post_highlighted {
+	background: #f5cfcf;
+}
+
 #topbar {
   border-bottom: none;
 }
