--- a/src/internal/styles/yotsuba-blue.css
+++ b/src/internal/styles/yotsuba-blue.css
@@ -116,3 +116,7 @@ a:link, a:visited {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 	border-right: 1px solid rgba(0, 0, 0, 0.25);
 }
+
+.post_highlighted {
+	background-color: #d6bad0;
+}
