--- a/src/internal/base_style.css
+++ b/src/internal/base_style.css
@@ -148,7 +148,7 @@ body {
 	color: #0062ff;
 }
 
-.post pre {
+.post blockquote {
 	font-family: sans-serif;
 	font-size: 13px;
 	text-wrap: wrap;
@@ -200,10 +200,6 @@ form .clear_file, form .file_upload {
 }
 
 .post h4 {
-	margin: 0;
-}
-
-.post pre {
 	margin: 0;
 }
 
@@ -519,10 +515,6 @@ form .clear_file, form .file_upload {
 .no_js_warning {
 	color: brown;
 	font-size: 10pt;	
-}
-
-.post_comment {
-	padding: 0.1cm;
 }
 
 .ban {
