--- a/src/internal/styles/wunk.css
+++ b/src/internal/styles/wunk.css
@@ -17,12 +17,7 @@ hr {
 	color: navy;
 }
 
-.post {
-    background-color: none;
-    margin: 0;
-}
-
-.reply {
+.reply, .catalog_post, .board_pages {
 	background: #f5e5cf;
   	border-top: 1px solid rgba(255, 255, 255, 0.5);
   	border-left: 1px solid rgba(255, 255, 255, 0.5);
@@ -99,14 +94,6 @@ a:link, a:visited {
 
 .list .boards_table tr:nth-of-type(odd) {
 	background-color: #eeeeee;
-}
-
-.board_pages {
-	background: #f0e0d6;
-	border-top: 1px solid rgba(255, 255, 255, 0.5);
-	border-left: 1px solid rgba(255, 255, 255, 0.5);
-	border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-	border-right: 1px solid rgba(0, 0, 0, 0.25);
 }
 
 .post_title {
