--- a/src/internal/base_style.css
+++ b/src/internal/base_style.css
@@ -2,7 +2,7 @@
 body {
 	padding: 0;
 	margin: 0;
-	font-family: sans-serif;
+	font-family: Arial, Helvetica, sans-serif
 }
 
 #board_index_header {
@@ -150,7 +150,7 @@ body {
 
 .post blockquote {
 	font-family: sans-serif;
-	font-size: 13px;
+	font-size: 10pt;
 	text-wrap: wrap;
 	margin: 0.2cm;
 }
