--- a/src/internal/styles/modernized.css
+++ b/src/internal/styles/modernized.css
@@ -111,6 +111,20 @@ a:link, a:visited {
 	margin-bottom: 0.5cm;
 }
 
+.reply {
+	padding: 0;
+}
+
+.reply .post_upper {
+	padding: 0.1cm;
+	border-bottom: 1px solid#00000044;
+	background: #c2c6df;
+}
+
+.reply .post_lower, .reply .post_attachment {
+	margin: 0.2cm;
+}
+
 .catalog_post {
 	margin: 0.1cm;
 }
