Changed the look of the post form

--- a/src/internal/base_style.css
+++ b/src/internal/base_style.css
@@ -556,6 +556,10 @@ form .clear_file, form .file_upload {
 	font-size: 11pt;
 }
 
+.rules_disclaimer {
+	font-size: 10pt;
+}
+
 @media (max-width: 500px) {
 	.post_attachment {
 		max-height: 150px;
