--- a/src/internal/styles/yotsuba-blue.css
+++ b/src/internal/styles/yotsuba-blue.css
@@ -34,7 +34,7 @@ hr {
 
 .post_form th {
 	background: #9988ee;
-	border: 1px solid black;
+	border: none;
 }
 
 a:link, a:visited {
@@ -48,7 +48,6 @@ a:link, a:visited {
 #reply_disclaimer {
 	margin-left: 2px;
 	margin-right: 3px;
-	border: 1px solid black;
 	background: #40d9ff;
 	color: black;
 }
