--- a/src/internal/base_style.css
+++ b/src/internal/base_style.css
@@ -177,6 +177,15 @@ body {
 	font-size: 10pt;
 }
 
+.post button {
+	margin: 0;
+	margin-right: 0.2cm;
+	width: 18px;
+	height: 18px;
+	font-size: 8pt;
+	padding: 0;
+}
+
 .post .your_post, .post .your_thread {
 	margin: 0px;
 	margin-right: 0.2cm;
