--- a/src/internal/styles/yotsuba.css
+++ b/src/internal/styles/yotsuba.css
@@ -13,7 +13,7 @@ hr {
 	color: navy;
 }
 
-.reply, .catalog_post, .board_pages {
+.reply, .catalog_post, .board_pages, .post_form {
 	background: #f0e0d6;
   	border-top: 1px solid rgba(255, 255, 255, 0.5);
   	border-left: 1px solid rgba(255, 255, 255, 0.5);
@@ -25,7 +25,7 @@ hr {
   border-bottom: none;
 }
 
-.post_form th {
+.post_form th, .post_form .form_topbar {
 	background: #eeaa88;
 	border: 1px solid #912220;
 }
