Added ability to change password

--- a/src/internal/base_style.css
+++ b/src/internal/base_style.css
@@ -672,3 +672,7 @@ form .clear_file, form .file_upload {
 .js_only {
 	display: none;
 }
+
+.post_form button[type=submit] {
+	margin-bottom: 0.5cm;
+}
